refactor: extract Pkcs11 token-identity, discovery-signal, prober (SRP/DIP)
- Pkcs11TokenIdentity moved to its own file (one-declaration-per-file)
- Pkcs11DiscoverySignal: discovery-running refcount + StateFlow extracted
  as a Koin singleton; Pkcs11Discoverer now delegates
- Pkcs11Prober interface + Pkcs11SubprocessProber: consolidate probe-spawn
  logic that was split across Pkcs11Discoverer and Pkcs11SubprocessResult;
  Pkcs11SignalName extracted (DRY); Pkcs11SubprocessResult slimmed to its
  sealed value type
- rewire Pkcs11Discoverer / WarmupService / DiagnosticsService /
  DssTokenService + JvmModule onto the injected Pkcs11Prober (DIP),
  replacing the tokenProber lambda + mockkStatic seam
- tests modernised onto injected mocks (SubprocessResultTest renamed to
  SubprocessProberTest; DiscovererTest via a proberOf adapter)
- behaviour-preserving; full sweep green; KDoc kept in sync
- steps 1-3 of the Pkcs11Discoverer restructure; 4-9 to follow